--- a/11-react-apps/02-comfy-store/src/index.css
+++ b/11-react-apps/02-comfy-store/src/index.css
@@ -1,3 +1,9 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer components {
+    .align-elements {
+        @apply mx-auto max-w-6xl px-8
+    }
+}
